# documentado

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
autoload/: documentado.vim
plugin/: documentado.vim
src/: app.rs  cache.rs  config.rs  docs.rs  main.rs  ui.rs
