[package]
name = "documentado"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo = "0.5"
scraper = "0.22"
directories = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
